# pamarox

./: Cargo.toml  build.sh  readme.md  run.sh  test  test.c  test.h
src/: ctype.rs  lib.rs  mem.rs  playground.rs  slim_shady.asm  stdio.rs  stdutil.rs  string.rs  stuff.rs  syscall_bind.rs
src/consts/: mmap.rs  mod.rs  sysconf.rs
