[package]
name = "pamarox"
version = "0.1.0"
edition = "2021"

[dependencies]
pipey = {git = "https://github.com/gitretard/pipey"}

[lib]
# https://developers.redhat.com/articles/2022/09/05/how-create-c-binding-rust-library
# to whoever that decided gcc's option syntax for linking dynamic libraries.
# if you are unfortunately alive and not rotting 6ft underground. fuck you 
crate-type = ["cdylib"]


[profile.dev]
lto = true         
codegen-units = 1  
panic = 'abort'     
strip = true      

[profile.release]
opt-level = 0
lto = true         
codegen-units = 1  
panic = 'abort'     
strip = true     
