[package]
name = "pamarox"
version = "0.1.0"
edition = "2021"

[dependencies]
pipey = {git = "https://github.com/gitretard/pipey"}

[lib]
crate-type = ["cdylib"]

[profile.dev]
lto = true         
codegen-units = 1  
panic = 'abort'     
overflow-checks = false 
debug = 2

[profile.release]
opt-level = 0
lto = true         
codegen-units = 1  
panic = 'abort'     
strip = true     
